# schematic

./: .editorconfig  .env-example  .gitignore  @  CLAUDE.md  LICENSE  README.md  pyproject.toml  serve-gunicorn  serve-uvicorn  uvicore
.claude/skills/uvicore-api/: SKILL.md
.claude/skills/uvicore-app-structure/: SKILL.md
.claude/skills/uvicore-commands/: SKILL.md
.claude/skills/uvicore-config-and-auth/: SKILL.md
.claude/skills/uvicore-database/: SKILL.md
.claude/skills/uvicore-framework-reference/: SKILL.md
.claude/skills/uvicore-framework-services/: SKILL.md
.claude/skills/uvicore-services-events-jobs/: SKILL.md
.claude/skills/uvicore-testing/: SKILL.md
.claude/skills/uvicore-web/: SKILL.md
.github/instructions/: uvicore-app.instructions.md  uvicore-instruction-routing.instructions.md  uvicore-skill-routing.instructions.md  uvicore-testing.instructions.md
.github/skills/uvicore-sample-app-review/: SKILL.md
.github/skills/uvicore-sample-app-review/references/: example-drift-signals.md  review-checklist.md
.install/: install.py
.install/lib/: console.py  helpers.py  install.py  installer.py  questions.py
.install/stubs/: Pipfile  README.md  pyproject-old-poetryv1.toml  pyproject-uv.toml  pyproject.toml  requirements.txt
acme/appstub/commands/: welcome.py
acme/appstub/config/: app.py  appstub.py  auth.py  cache.py  database.py  dependencies.py  http.py  logger.py  mail.py  overrides.py  package.py
acme/appstub/database/seeders/: __init__.py
acme/appstub/database/tables/: __init__.py
acme/appstub/http/: server.py
acme/appstub/http/api/: welcome.py
acme/appstub/http/controllers/: welcome.py
acme/appstub/http/routes/: api.py  web.py
acme/appstub/http/views/appstub/: welcome.j2
acme/appstub/models/: __init__.py
acme/appstub/package/: bootstrap.py  provider.py
acme/appstub/services/: appstub.py  bootstrap.py
adr/: README.md
journal/: 2026-06-23.md  2026-06-24.md  README.md
tests/: conftest.py  test_example.py  test_welcome_api.py  test_welcome_web.py
