[tool.poetry]
name = "acme-appstub"
version = "0.1.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "Uvicore Install Application Stub"
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "acme/appstub" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
uvicore = {path = "../uvicore", extras = ["database", "web"], develop = true}

[tool.poetry.dev-dependencies]
pytest = "6.2.*"
pytest-cov = "2.11.*"
pytest-asyncio = "0.14.*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
