[tool.poetry]
name = "acme-appstub"
version = "0.2.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "Uvicore Install Application Stub"
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "acme/appstub" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
uvicore = {path = "../framework", extras = ["database", "redis", "web"], develop = true}

[tool.poetry.dev-dependencies]
pytest = "8.0.*"
pytest-cov = "4.1.*"
pytest-asyncio = "0.18.*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
