[tool.poetry]
name = "acme-appstub"
version = "0.4.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "Uvicore Install Application Stub"
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "acme/appstub" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
uvicore = {path = "../framework", extras = ["database", "redis", "web"], develop = true}

[tool.poetry.dev-dependencies]
pytest = "9.1.1"
pytest-cov = "7.1.0"
pytest-asyncio = "1.4.0"

# pytest-asyncio 1.x removed the custom `event_loop` fixture override that this
# suite used to run everything on a single session loop.  The suite is designed
# around session-scoped fixtures (appstub) that open DB/redis connections bound
# to one loop, so pin BOTH fixtures and tests to the session loop scope to
# reproduce the old single-loop behavior.  Without this, tests run on
# per-function loops while the connections live on the session loop, giving
# "Future attached to a different loop" / "Event loop is closed".
[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
