[project]
name = "acme-appstub"
version = "0.1.0"
description = "Acme Test App"
authors = [
    {name = "Artisan Smith",email = "smith@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
]


[project.urls]
# Project URLs
homepage = "https://example.com"
repository = "https://git.example.com"
documentation = "https://docs.example.com"


[tool.poetry]
# Include this package itself
packages = [
    { include = "acme/appstub" },
]
# Additional included/excluded files in the final package build
include = ["LICENSE"]


[tool.poetry.dependencies]
# Required dependencies
# If you want code uvicore framework locally, use a path based develop dependency
# uvicore = {path = "../framework", develop = true, extras = []}
python = ">=3.10,<4.0"
<pyproject-uvicore>


[tool.poetry.group.test.dependencies]
# Optional test dependencies (included by default)
# poetry install --without test"
pytest = "8.3.*"
pytest-cov = "6.0.*"
pytest-asyncio = "0.25.*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
