[project]
name = "acme-appstub"
version = "0.1.0"
description = "Acme Test App"
authors = [
    {name = "Artisan Smith", email = "smith@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Environment :: Web Environment",
    "Environment :: Console",
]

# Standard PEP 621 dependencies — the version constraints you'd resolve from Nexus.
dependencies = [
    "<pyproject-uvicore>",
]


[project.urls]
# Project URLs
homepage = "https://example.com"
repository = "https://git.example.com"
documentation = "https://docs.example.com"


# Standard PEP 735 dependency group (installed by default; exclude with `poetry install --without test`)
[dependency-groups]
test = [
    "pytest (==9.1.1)",
    "pytest-cov (==7.1.0)",
    "pytest-asyncio (==1.4.0)",
]


[tool.poetry]
# Include this package itself
packages = [
    { include = "acme/appstub" },
]
# Additional included/excluded files in the final package build
include = ["LICENSE"]


# ENRICHMENT: override the project.dependencies above with local editable paths for dev.
# `develop = true` lives here because PEP 508 (project.dependencies) can't express it.
# Comment these two lines out (or delete) to fall back to the Nexus versions above.
#[tool.poetry.dependencies]
#uvicore = {path = "../framework", develop = true}


[build-system]
requires = ["poetry-core>=2.1.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
