[project]
name = "acme-appstub"
version = "0.1.0"
description = "Acme Test App"
authors = [
    {name = "Artisan Smith", email = "smith@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Environment :: Web Environment",
    "Environment :: Console",
]

# Standard PEP 621 dependencies — the version constraints you'd resolve from Nexus.
dependencies = [
    "<pyproject-uvicore>",
]


[project.urls]
# Project URLs
homepage = "https://example.com"
repository = "https://git.example.com"
documentation = "https://docs.example.com"


# Standard PEP 735 dependency group (installed by default; exclude with `poetry install --without test`)
[dependency-groups]
test = [
    "pytest (==9.1.1)",
    "pytest-cov (==7.1.0)",
    "pytest-asyncio (==1.4.0)",
]


# Pytest / pytest-asyncio configuration.
# The async fixtures in tests/conftest.py (`app`, `client`) are session scoped and pinned
# to a single session-wide event loop (loop_scope="session").  We must make the TESTS run
# on that same session loop, otherwise each test gets its own function-scoped loop while the
# shared singletons (e.g. the httpx `http_client` bound in the IoC) open their connections on
# that per-test loop.  When the session-scoped `app` fixture later tears down and closes the
# http_client (PytestShutdown), the per-test loop is already gone -> "RuntimeError: Event loop
# is closed".  Defaulting both fixtures and tests to the session loop keeps everything on one
# loop for the whole run.
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"


[tool.poetry]
# Include this package itself
packages = [
    { include = "acme/appstub" },
]
# Additional included/excluded files in the final package build
include = ["LICENSE"]


# ENRICHMENT: override the project.dependencies above with local editable paths for dev.
# `develop = true` lives here because PEP 508 (project.dependencies) can't express it.
# Comment these two lines out (or delete) to fall back to the Nexus versions above.
#[tool.poetry.dependencies]
#uvicore = {path = "../framework", develop = true}


[build-system]
requires = ["poetry-core>=2.1.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
